fix collaborator list spacing

--- a/app/assets/stylesheets/_mobile.css.sass
+++ b/app/assets/stylesheets/_mobile.css.sass
@@ -1,4 +1,4 @@
-@media screen and (min-device-width: 220px) and (max-device-width: 500px) 
+@media screen and (min-device-width: 0px) and (max-device-width: 500px) 
   #container
     width: 100%
     top: 0
@@ -43,7 +43,7 @@
           font-size: 16px
             padding: 0
           .task_title
-            padding: 6px 0 8px 6px
+            padding: 4px 0 5px 23px
           &.completed
             display: none
           &:hover
