--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -302,7 +302,7 @@ td.shared_list
       margin: 0 0 0 -4px
       line-height: 1.2
       border-bottom: 1px solid #eee
-      min-height: 23px
+      height: 23px
       position: relative
       &:hover
         cursor: url(https://mail.google.com/mail/images/2/openhand.cur), move !important
@@ -489,7 +489,7 @@ td.shared_list
         li
           color: #999
           background-color: #eee
-          padding: 4px 0 2px 6px
+          padding: 6px 0 2px 6px
           border-top: 1px solid #ddd
           border-bottom: none
           -webkit-border-bottom-left-radius: 2px
@@ -512,8 +512,8 @@ td.shared_list
           .remove
             display: none
             position: absolute
-            top: 2px
-            right: 2px
+            top: 3px
+            right: 3px
             height: 16px
             width: 16px
             margin-left: 2px
